finishing touches to landing page layout

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="hero-container">
                 <div class="blurb">
                     <div class="hero-text">This Website is Awesome</div>
-                    <div class="hero-subtext">This is the subtext under hero text</div>
+                    <div class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
                     <button class="sign-up">Sign-up</button>
                 </div>
                 <img src="" alt="This is an image">
@@ -56,19 +56,22 @@
 
     <section class="quote-section">
         <div class="quote-container">
-            <div class="quote-text">"quote text ending with a signature"</div>
+            <div class="quote-text">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</div>
             <div class="signature">-Thor, God of Thunder</div>
         </div>
     </section>
 
 
     <section class="call-section">
-            <div class="call-containter">
-                <div class="call-text">Call to action! Its time!</div>
-                <div class="sign-up-text">Sign up-signature  for our product b-signature t button right over there!</div>
-                <div class="sign-up-button">
+            <div class="call-container">
+                <div class="call-text-container">
+                    <div class="call-text-box">
+                        <div class="call-text">Call to action! Its time!</div>
+                        <div class="sign-up-text">Sign up for our product by clicking that button right over there!</div>
+                    </div>
                     <button class="sign-up-alt">Sign-up</button>
                 </div>
+                
             </div>
     </section>
 
@@ -79,4 +82,3 @@
 
 
 </body>
-</html>
